--- a/recu-gateway/build.gradle
+++ b/recu-gateway/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.6.RELEASE'
+	id 'org.springframework.boot' version '2.1.7.RELEASE'
 	id 'java'
 }
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.distribuida.registro'
+group = 'com.distribuida.gateway'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -18,8 +18,7 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-//	implementation 'org.glassfish.jaxb:jaxb-runtime'
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 }
 
 dependencyManagement {
